# Intelligent-Quiz-Manager

./: .replit
Intelligent-Quiz-Managerzip/: .replit
Intelligent-Quiz-Managerzip/Intelligent-Quiz-Manager/: .replit  pyproject.toml
Intelligent-Quiz-Managerzip/Intelligent-Quiz-Manager/Intelligent-Quiz-Manager58/: .replit  pyproject.toml  replit.md
Intelligent-Quiz-Managerzip/Intelligent-Quiz-Manager/Intelligent-Quiz-Manager58/Intelligent-Quiz-Manager57zip/Intelligent-Quiz-Manager56zip/Intelligent-Quiz-Manager55zip/: pyproject.toml
accounts/: forms.py  models.py
accounts/migrations/: 0001_initial.py  0004_userprofile_current_streak_and_more.py
quiz/: models.py  views.py
quiz/migrations/: 0001_initial.py
quiz_project/: urls.py
static/css/: style.css
templates/: base.html
templates/accounts/: forgot_password.html  profile.html  reset_password.html  signup.html
templates/quiz/: category.html  dashboard.html  results.html  take.html
